servicemesh/istio-in-kubernetes/ingress/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  generation: 1
  name: istio-grafana
  namespace: istio-system
spec:
  rules:
  - host: istio-grafana.xwfintech.com
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
        path: /
  tls:
  - hosts:
    - istio-grafana.xwfintech.com
    secretName: xwfintech.com
