servicemesh/istio-in-kubernetes/ingress/jaeger-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  generation: 1
  name: istio-jaeger
  namespace: istio-system
spec:
  rules:
  - host: istio-jaeger.xwfintech.com
    http:
      paths:
      - backend:
          serviceName: jaeger-query
          servicePort: 16686
        path: /
  tls:
  - hosts:
    - istio-jaeger.xwfintech.com
    secretName: xwfintech.com
